# homeworks

./: beettles_battle.ipynb  cinema.ipynb  classes.ipynb  digit_guesser.ipynb  fibonacci.ipynb  fibonacci_no_cash.ipynb  my_functions.ipynb  pascal_triangle.ipynb
llm-new-homework/: agents.ipynb
llm-newer-homework/: prompt_engineering.ipynb
llm-newest-homework/: 4_agents_yoooo.ipynb
llm_homework/: pyproject.toml
llm_homework/src/lecture_llm_api/: __init__.py  llm_homework.ipynb  settings.py
